--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <div class="wrapper">
         <div class="mockup">
-            <img src="_img/mockup.png" alt="Instagram">
+            <img src="img/mockup.png" alt="Instagram">
         </div>
         <div class="login-wrap">
             <div class="group">
-                <img class="logo" src="_img/logo.png" alt="logo">
+                <img class="logo" src="img/logo.png" alt="logo">
                 <div class="profile-photo">
-                    <img src="_img/profile.png" alt="foto-perfil">
+                    <img src="img/profile.png" alt="foto-perfil">
                 </div>
                 <a class="login" href="#">Continue como Thomas Shelby</a>
                 <a class="logout" href="#">Remover Conta</a>
