--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
@@ -16,9 +16,9 @@
         </div>
         <div class="login-wrap">
             <div class="group">
-                <img class="logo" src="img/logo.png" alt="logo">
+                <img class="logo" src="./img/logo.png" alt="logo">
                 <div class="profile-photo">
-                    <img src="img/profile.png" alt="foto-perfil">
+                    <img src="./img/profile.png" alt="foto-perfil">
                 </div>
                 <a class="login" href="#">Continue como Thomas Shelby</a>
                 <a class="logout" href="#">Remover Conta</a>
