--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <div class="mockup">
-            <img src="img/mockup.png" alt="Instagram">
+            <img src="./img/mockup.png" alt="Instagram">
         </div>
         <div class="login-wrap">
             <div class="group">
