--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    
+ <!-- clone da interface do instagram, para estudos de layout -->
 
 <head>
     <meta charset="UTF-8">
