--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram</title>
+    <title>Instagram-Clone</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
 </head>
@@ -14,7 +14,7 @@
 <body>
     <div class="wrapper">
         <div class="mockup">
-            <img src="./img/mockup.png" alt="Instagram">
+            <img src="./img/mockup.png" alt="Instagram-Clone">
         </div>
         <div class="login-wrap">
             <div class="group">
